# Marine-Navigation-Shortest-Path-Challenge

./: README.md
shortest-path-challenge/: ALGORITHM.md  CMakeLists.txt  build.bat  build.sh
shortest-path-challenge/data/: example_input.json
shortest-path-challenge/include/: geometry.h  json_parser.h  shortest_path.h  visibility_graph.h
shortest-path-challenge/src/: geometry.cpp  json_parser.cpp  main.cpp  shortest_path.cpp  visibility_graph.cpp
